manifest/objects/L2O_US_and_Canada_Direct_Prices__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_At_Risk_Fee__c</fullName>
        <label>At Risk Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_BusinessRegion__c</fullName>
        <label>Business Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Consult_Type__c</fullName>
        <label>Consult Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consult_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_ContractPath__c</fullName>
        <description>Contract Path = CPQ Pricebook</description>
        <label>Contract Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Path</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fee_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_GrandParent_Product_Code__c</fullName>
        <formula>IF( ISBLANK(L2O_GrandParent_Product__r.ProductCode) , &apos;NULL&apos;, L2O_GrandParent_Product__r.ProductCode)</formula>
        <label>GrandParent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_GrandParent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrandParent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>US_and_Canada_Direct_Pricings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Initial_Utilization_Cap__c</fullName>
        <label>Initial Utilization Cap</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Employees_End__c</fullName>
        <label>Number of Employees End</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Employees_Start__c</fullName>
        <label>Number of Employees Start</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Package_Product_Code__c</fullName>
        <label>Package Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(L2O_Parent_Product__r.ProductCode),&apos;NULL&apos; , L2O_Parent_Product__r.ProductCode)</formula>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>US_and_Canada_Direct_Pricings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_ProductCode__c</fullName>
        <formula>L2O_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>US_and_Canada_Direct_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_StateProvince__c</fullName>
        <label>State/Province</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Up_Front_Fee__c</fullName>
        <label>Up Front Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Utilization_Assumption__c</fullName>
        <label>Utilization Assumption</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>US and Canada Direct Prices</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>L2O_ContractPath__c</columns>
        <columns>L2O_GrandParent_Product_Code__c</columns>
        <columns>L2O_Parent_Product_Code__c</columns>
        <columns>L2O_ProductCode__c</columns>
        <columns>L2O_Product__c</columns>
        <columns>L2O_Price__c</columns>
        <columns>L2O_Fee_Type__c</columns>
        <columns>L2O_StateProvince__c</columns>
        <columns>L2O_Initial_Utilization_Cap__c</columns>
        <columns>L2O_Utilization_Assumption__c</columns>
        <columns>L2O_Number_of_Employees_Start__c</columns>
        <columns>L2O_Number_of_Employees_End__c</columns>
        <columns>L2O_Effective_Date__c</columns>
        <columns>L2O_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L2O_BusinessRegion__c</field>
            <operation>equals</operation>
            <value>USA</value>
        </filters>
        <filters>
            <field>L2O_GrandParent_Product_Code__c</field>
            <operation>equals</operation>
            <value>HY-CMUSEMP-BUNDLE-3.0</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UCDP-{0000}</displayFormat>
        <label>US and Canada Direct Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>US and Canada Direct Prices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>